--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <script src="js/var&op.js"></script>
     <script src="js/strings.js"></script>
     <script src="js/array.js"></script>
+    <script src="js/if_else.js"></script>
     <script src="js/for.js"></script>
     <script src="js/function.js"></script>
-    <script src="js/if_else.js"></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Exercise Javascript</h1>
 </body>
 </html>
